--- a/styles.css
+++ b/styles.css
@@ -447,7 +447,7 @@ nav#menu.menu.active {
 .menu li {
     margin: 0.5rem 0;
     text-align: center;
-    position:ollowing: relative;
+    position: relative;
 }
 
 .menu a, .menu button.download-pdf {
